--- a/001_load_2nd_milvus.ipynb
+++ b/001_load_2nd_milvus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "89a77cb6",
    "metadata": {},
    "outputs": [
@@ -15,54 +15,40 @@
       "/Users/michal/anaconda3/envs/milvus/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bdb68653-e075-4440-9c82-7cfc8f8462b9.wxd.cva7rjed0mvr6khqeoc0.lakehouse.ibmappdomain.cloud\n",
-      "443\n",
-      "C3Bsce8TEU4mcNmGw31sLOyRrVQ2sKK2L-0UxS-OLcXs\n"
-     ]
     }
    ],
    "source": [
-    "import os\n",
-    "from typing import List, Dict\n",
+    "# import os\n",
+    "# from typing import List, Dict\n",
     "\n",
-    "from pymilvus import MilvusClient, DataType\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "from pypdf import PdfReader\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
+    "# from pymilvus import MilvusClient, DataType\n",
+    "# from sentence_transformers import SentenceTransformer\n",
+    "# from pypdf import PdfReader\n",
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
     "\n",
-    "# ========= CONFIGURATION =========\n",
+    "# # ========= CONFIGURATION =========\n",
     "\n",
-    "# Set these as environment variables OR hard-code (not recommended)\n",
-    "MILVUS_HOST = os.getenv(\"MILVUS_HOST\")        # gRPC host from watsonx.data Milvus service\n",
-    "MILVUS_PORT = os.getenv(\"MILVUS_PORT\", \"443\") # gRPC port from service\n",
-    "MILVUS_API_KEY = os.getenv(\"MILVUS_API_KEY\")  # IBM Cloud API key\n",
+    "# # Set these as environment variables OR hard-code (not recommended)\n",
+    "# MILVUS_HOST = os.getenv(\"MILVUS_HOST\")        # gRPC host from watsonx.data Milvus service\n",
+    "# MILVUS_PORT = os.getenv(\"MILVUS_PORT\", \"443\") # gRPC port from service\n",
+    "# MILVUS_API_KEY = os.getenv(\"MILVUS_API_KEY\")  # IBM Cloud API key\n",
     "\n",
-    "# Paths to your PDFs\n",
-    "PUBLIC_PDF_PATH = \"./data/offerings_public.pdf\"\n",
-    "MANAGERS_PDF_PATH = \"./data/offerings_managers_only.pdf\"\n",
+    "# # Paths to your PDFs\n",
+    "# PUBLIC_PDF_PATH = \"./data/offerings_public.pdf\"\n",
+    "# MANAGERS_PDF_PATH = \"./data/offerings_managers_only.pdf\"\n",
     "\n",
-    "# Collection names\n",
-    "PUBLIC_COLLECTION = \"offerings_public\"\n",
-    "MANAGERS_COLLECTION = \"offerings_managers_only\"\n",
+    "# # Collection names\n",
+    "# PUBLIC_COLLECTION = \"offerings_public\"\n",
+    "# MANAGERS_COLLECTION = \"offerings_managers_only\"\n",
     "\n",
-    "# Embedding model (384 dimensions)\n",
-    "EMBEDDING_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "EMBEDDING_DIM = 384  # fixed for this model\n",
+    "# # Embedding model (384 dimensions)\n",
+    "# EMBEDDING_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "# EMBEDDING_DIM = 384  # fixed for this model\n",
     "\n",
-    "print(MILVUS_HOST)\n",
-    "print(MILVUS_PORT)\n",
-    "print(MILVUS_API_KEY)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# print(MILVUS_HOST)\n",
+    "# print(MILVUS_PORT)\n",
+    "# print(MILVUS_API_KEY)\n",
     "\n",
     "\n",
     "import os\n",
@@ -100,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "86fe6247",
    "metadata": {},
    "outputs": [],
@@ -111,7 +97,7 @@
     "\t\n",
     "\n",
     "    milvus_uri = f\"https://ibmlhapikey_michal.kordyzon@pl.ibm.com:{MILVUS_API_KEY}@{MILVUS_HOST}:{MILVUS_PORT}\"\n",
-    "\n",
+    "    \n",
     "    client = MilvusClient(\n",
     "        uri=milvus_uri,\n",
     "        secure=True,           # SaaS Milvus is always TLS\n",
@@ -576,7 +562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "milvus",
    "language": "python",
    "name": "python3"
   },
